# motionanchor

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.opencode/agents/: docs.md  review.md
.opencode/commands/: implement-slice.md  phase0-plan.md  review-slice.md  update-docs.md
docs/: 01_Product_Requirements_Document.md  02_System_Architecture_Document.md  03_Development_Roadmap.md  04_Open_Source_Module_Strategy.md  05_OpenCode_Implementation_Handoff.md  06_Engine_Neutral_Manifest_v2_and_Project_Format.md
docs/adr/: ADR-012-windows-credential-store.md  ADR-013-development-env-secret-fallback.md  ADR-014-ffmpeg-media-adapter.md  (+21 more)
scripts/: unity6-acceptance.ps1  windows-package-acceptance.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_projects.sql
src-tauri/src/: animation_manifest.rs  artifact_cleanup.rs  canonical_export.rs  credential_store.rs  database.rs  dev_env_store.rs  lib.rs  main.rs  pipeline_manifest.rs  previews.rs  project_workspace.rs  prompt_editor.rs  sidecar.rs  sprite_sheet.rs  unity_export.rs
tools/: analyze_rgba_sequence.py  build_rgba_contact_sheet.py  compose_rgba_sequence.py  ingest_cat_trap_fixture.py  prepare_dash_fixture.py  probe_real_job_cancel.py  run_cat_trap_mask_benchmark.py  run_cat_trap_sam2_benchmark.py  run_checks.cmd  run_real_cancel_probe.cmd
worker/: build-worker.ps1  entrypoint.py  requirements-runtime.txt  requirements-sam2-bootstrap.txt  requirements-sam2-evaluation.txt
(+84 files in other folders)
