[package]
name = "motionanchor"
version = "0.1.0"
description = "Consistent Characters. Production-Ready Motion."
authors = ["MotionAnchor Contributors"]
edition = "2021"

[lib]
name = "motionanchor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
